# lighthouse_fiis

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/lighthouse_fiis/: main.py
src/lighthouse_fiis/crews/analyzer_crew/: analyzer_crew.py
src/lighthouse_fiis/crews/analyzer_crew/config/: agents.yaml  tasks.yaml
src/lighthouse_fiis/crews/retriever_crew/: retriever_crew.py
src/lighthouse_fiis/crews/retriever_crew/config/: agents.yaml  tasks.yaml
