[project]
name = "lighthouse_fiis"
version = "0.1.0"
description = "lighthouse-fiis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "lighthouse_fiis.main:kickoff"
plot = "lighthouse_fiis.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
